# ssh-tunnel-guardian

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection_commands.rs  mod.rs  tunnel_commands.rs
src-tauri/src/connections/: keychain.rs  manager.rs  mod.rs  persistence.rs  types.rs
src-tauri/src/tunnel/: error_classifier.rs  health.rs  manager.rs  mod.rs  persistence.rs  process.rs  state_machine.rs  types.rs
src/components/: AddConnectionModal.tsx  AddTunnelModal.tsx  ConnectionCard.tsx  EmptyState.tsx  ErrorBoundary.tsx  Header.tsx  LogsPanel.tsx  StatusBadge.tsx  TunnelCard.tsx
src/hooks/: useTauriEvents.ts
src/lib/: tauriApi.ts
src/store/: connectionStore.ts  tunnelStore.ts
src/types/: index.ts
