[package]
name = "ssh-tunnel-guardian-tauri"
version = "0.1.0"
description = "SSH Tunnel Guardian — monitor, reconnect and classify SSH -L tunnels"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ssh_tunnel_guardian_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
uuid         = { version = "1", features = ["v4"] }
keyring      = { version = "3", features = ["apple-native"] }

